--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
 }
+.teste {
+    min-width: 481px;
+    background-color: aquamarine;
+}
